Use custom header for token, instead of "Authorization" header hack
