# internal/web/middleware/auth.go
@@ -6,19 +6,16 @@ import (
 	"github.com/x1unix/sbda-ledger/internal/model/auth"
 	"github.com/x1unix/sbda-ledger/internal/service"
 	"github.com/x1unix/sbda-ledger/internal/web"
-	"github.com/x1unix/sbda-ledger/internal/web/httputil"
 )
+
+const authHeader = "X-Auth-Token"
 
 // NewAuthMiddleware returns a new middleware which checks if user is authenticated.
 //
 // If user is authenticated, user session will be populated into request context.
 func NewAuthMiddleware(authSvc *service.AuthService) web.MiddlewareFunc {
 	return func(rw http.ResponseWriter, req *http.Request) (*http.Request, error) {
-		token, ok := httputil.BearerTokenFromRequest(req)
-		if !ok {
-			return req, service.ErrAuthRequired
-		}
-
+		token := req.Header.Get(authHeader)
 		ssid, err := auth.ParseToken(token)
 		if err != nil {
 			return req, service.ErrAuthRequired
